8579 ixgbe infinite loops in rar and vmdq clearing Reviewed by: Jerry Jelinek <jerry.jelinek@joyent.com> Reviewed by: Michael Speer <michael.speer@pluribusnetworks.com> Approved by: Richard Lowe <richlowe@richlowe.net>